metadata/1.0.7/pt-BR.md
# Claud CO2 — App Store Connect Metadata

**Version:** 1.0.7  
**Locale:** Portuguese (Brazil)  
**Locale code:** `pt-BR`

---

## App Information

| Field | Value | Limit | Count |
|---|---|---|---|
| **Name** | Claud CO2 | 30 | 9 |
| **Subtitle** | Monitore sua pegada de carbono | 30 | 29 |
| **Promotional Text** | Conheça o Claud — sua mascote nuvem que reage à sua pontuação de CO₂. Registre atividades, planeje viagens mais sustentáveis e receba dicas baseadas no clima. | 170 | 141 |

---

## Keywords

```
carbono,CO2,clima,sustentabilidade,ecológico,transporte,saúde,tempo,dicas,pegada,meio ambiente
```

**Limit:** 100 characters · **Count:** 88

---

## Description

O Claud CO2 ajuda você a entender e reduzir sua pegada de carbono pessoal — um dia de cada vez.

Registre as atividades que importam: direção, voos, transporte público, alimentação, energia em casa, caminhada, bicicleta, plantio de árvores e reciclagem. Veja como seu consumo e compensação de CO₂ evoluem ao longo da semana com gráficos claros.

**Conheça o Claud, sua mascote do carbono**  
O Claud é uma nuvem amigável que reflete sua saúde semanal de CO₂. Faça escolhas mais verdes e veja o Claud prosperar.

**Planeje viagens mais sustentáveis**  
Compare opções de transporte no mapa integrado. As rotas são ordenadas por impacto de CO₂ — a opção mais verde sempre aparece primeiro. Salve viagens diretamente no registro de atividades.

**Sincronize com o Apple Health**  
Importe automaticamente passos e distância de caminhada/corrida do HealthKit. Transforme movimento do dia a dia em compensação registrada sem esforço extra.

**Sugestões baseadas no clima**  
O Claud verifica o clima e a qualidade do ar locais para sugerir caminhada ou bicicleta quando as condições são boas — e avisar quando atividade ao ar livre não é recomendada.

**Dicas inteligentes baseadas em dados**  
Receba insights personalizados das suas atividades registradas: tendências de uso, emissores de alto impacto, lacunas de compensação, trocas alimentares e alternativas mais verdes com números reais em kg CO₂.

**Acompanhe tendências ao longo do tempo**  
Tendências semanais, consumo vs. compensação e atividades mais usadas ajudam você a identificar padrões e melhorar.

Assinaturas e planos vitalícios desbloqueiam a experiência completa do Claud CO2. Comece hoje sua jornada para um estilo de vida mais verde.

---

## What's New in This Version

**Version 1.0.7**

- Conheça sua nova mascote — o Claud agora reage à sua pontuação de CO₂ em tempo real
- Dicas baseadas no clima — o Claud verifica as condições locais para sugerir o melhor momento para caminhar, pedalar ou usar transporte público
- Dicas de atividade mais inteligentes — insights baseados em dados com números reais de CO₂, tendências de uso e sugestões práticas
- Uma experiência mais limpa e rápida — cards redesenhados, navegação mais fluida e layout mais intuitivo
- Nova experiência de mapas — planeje viagens mais sustentáveis com comparação de transportes ao vivo e estimativas de CO₂ no mapa

---

## URLs

| Field | URL |
|---|---|
| **Support URL** | `https://giusscos.com/trackco2/support` |
| **Marketing URL** | `https://giusscos.com/trackco2` |
| **Privacy Policy URL** | `https://giusscos.com/trackco2/privacy` |

---

## Categories

| | Category |
|---|---|
| **Primary** | Health & Fitness |
| **Secondary** | Lifestyle |

---

## In-App Purchases & Subscriptions

Copiar para App Store Connect → Assinaturas / Compras no app → [produto] → [idioma].

### Grupo de assinaturas: Claud+

| Campo | Valor |
|---|---|
| **Nome de referência** | Claud+ |
| **Nome de exibição** | Claud+ |
| **Descrição** | Acesso premium ao Claud CO2 |

### Assinaturas

| ID do produto | Referência | Nome de exibição | Descrição |
|---|---|---|---|
| `fp_499_1w` | Claud+ Weekly | Claud+ | Acesso ilimitado por uma semana |
| `fp_1999_1y_1w` | Claud+ Yearly | Claud+ | Acesso ilimitado por um ano |

### Compras vitalícias (não consumíveis)

| ID do produto | Referência | Nome de exibição | Descrição |
|---|---|---|---|
| `com.giusscos.footprintLifetime` | Claud CO2 Lifetime | Acesso vitalício | Acesso vitalício ilimitado |
| `com.giusscos.footprintFamilyLifetime` | Claud CO2 Family Lifetime | Acesso vitalício familiar | Acesso vitalício ilimitado para sua família |

---

## Screenshots

See [screenshots.md](./screenshots.md) for device sizes and capture instructions.

### Suggested caption overlays

| # | Screen | Caption |
|---|---|---|
| 1 | Resumo | Seu CO₂ em um relance |
| 2 | Atividades | Registre cada **escolha** climática |
| 3 | Viagens / Mapa | Escolha a rota mais **verde** |
| 4 | Dicas | **Dicas** baseadas nos seus dados |
| 5 | Clima | **Caminhe** quando vale a pena |

### How each screenshot should look

1. **Hero** — Mascote Claud saudável (verde/menta), gráfico semanal de CO₂, card de clima visível.
2. **Atividades** — Lista com Viagem de carro, Trem, Caminhada, Consumo de carne, etc.
3. **Viagens** — Mapa urbano com rota; cards comparando caminhada, ônibus e carro com rótulos CO₂.
4. **Dicas** — Card de dica com números em kg CO₂ e sugestão concreta.
5. **Clima** — Card «Ótimo momento para caminhar!» com céu limpo.

Capture on **iPhone 16 Pro Max** (1290×2796) with **Portuguese (Brazil)** system language.
